# glean

glean-core/: Cargo.toml
tools/embedded-uniffi-bindgen/: Cargo.toml
